--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" 
-    content="PatCare-Hub 펫케어허브가 제공하는 애완동물 건강검진 검사기와 검사용지를 사용해 보세요." />
+    content="CodeSemicon의 핵심 기술은 Memory 및 LSI 반도체 설계능력 입니다." />
   <meta name="theme-color" content="#ffffff">
   <meta name="Robots" content="All" />
   <meta name="naver-site-verification" content="a9986668cc366a9cfde1537fe5e08658744a9bcd" />
   <meta name="Keywords" 
-    content="펫케어허브, Petcare Hub, 네오글로벌테크, POCT Bio, SOCIUM, 휴대용 시험지 검출기, 
-      SPSD101, SOCIUM, 소변검사 시험지, SPUT-4 #SPUT-5, SCOIUM APP, 반려동물 홈닥터, 반려동물 헬스케어,
-      반려동물 건강관리, 반려동물 질병관리, 반려동물 소변검사, 반려동물 비대면 자가진단기, 반려동물 체외진단,
-      반려동물 소변검사키트, 동물용 의료기기" />
-  <meta name="Subject" content="애완동물 건강 지킴이" />
+    content="CodeSemicon, Semiconductor, IC design, ASIC, Chip Design, 반도체, IC설계" />
+  <meta name="Subject" content="CodeSemicon" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  
